--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h6 {font-size: 20px;}
 
 h1,h2,h3,h4,h5,h6 {font-family: 'Roboto', sans-serif;font-weight: 600;color: #333;}
 
-p {margin: 0 0 20px; color:#816943;}
+p {margin: 0 0 20px; color:#544381;}
 .symptom{
 	display: inline;
 }
@@ -72,6 +72,12 @@ header a.logo img{object-fit:cover;
 .navbar-default{border: none;background-color: #fff;box-shadow: 0 5px 11px rgba(0, 0, 0, 0.05);margin-bottom: 30px;padding: 5px;font-weight: bold;font-size: 18px;}
 .navbar-default{border: none;background-color: #fff;box-shadow: 0 5px 11px rgba(0, 0, 0, 0.05);margin-bottom: 30px;padding: 5px;font-weight: bold;font-size: 18px;}
 
+hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 
 .slide{}
 /* Carousel Styles */
@@ -92,7 +98,7 @@ header a.logo img{object-fit:cover;
 .carousel-control.left span:hover,
 .carousel-control.right span:hover {opacity: .7;filter: alpha(opacity=70);}
 
-.carousel-indicators .active {background-color: #DA251D;}
+.carousel-indicators .active {background-color: #b41dda;}
 .carousel-indicators {bottom: 10px;}
 
 .carousel-inner > .item {margin-left:0;margin-top:0;margin-bottom:0;padding-left: 0;width: 100%;height: auto;}
@@ -296,12 +302,12 @@ footer .col-footer.footer-4 {}
 a.btn:focus{outline: 0;}
 
 .btn-1 {color: #000;background-color: #fff;margin: 30px 15px 0 0;min-width: 170px;line-height: 26px;}
-.btn-1:hover {color: #fff;background-color: #E84C3D;}
+.btn-1:hover {color: #fff;background-color: #573de8;}
 
 .btn-2 {background: #E84C3D;border: 2px solid transparent;margin:20px 0 10px 0;}
-.btn-2:hover {color:#333;border:2px solid #E84C3D;background:transparent;}
+.btn-2:hover {color:#333;border:2px solid #573de8;background:transparent;}
 
-.btn-3 {color:#333;margin-top:0px;margin-top:15px;font-weight:bold;color:#E84C3D;padding:6px 0;font-size: 16px;}
+.btn-3 {color:#333;margin-top:0px;margin-top:15px;font-weight:bold;color:#573de8;padding:6px 0;font-size: 16px;}
 
 .btn-4 {background: #E84C3D;border: 2px solid transparent;margin:20px 0 10px 0;font-size:25px;}
 .btn-4:hover {color:#333;border:2px solid #E84C3D;background:transparent;}
